# backup

./: .gitignore  .pyd)  FLOWORK-Synapse.bat  FLOWORK.bat  backup.py  build_libs.bat  clean.py  encode.txt  file_fingerprints.json  get-pip.py  launcher.py  lock.txt  lockplugin.txt  main.py  mkdocs.yml  pyproject.toml  requirements.txt  run_secure_encode.bat  secure_encode.txt  start_flowork.bat  updater.py  webhook.py
ai_providers/: BaseAIProvider.py
core_services/: core_lifecycle.flowork  theme_manager.flowork
data/: .flowork_id  datasets.db  datasets.json  flowork_data.db  license.seal  metrics_history.jsonl  permissions.sig  protected_components.txt  settings.json  state.json  trigger_index.cache  variables.json  widget_index.cache
data/presets/: 1. TEST RECEIVER.json  2.WEB SCRAPER (SELENIUM).json  3. IMAGE GENERATOR (REALISTIC).json  4. IMAGE GENERATOR (ANIMATE).json  5.ENCODE.json  6.DECODE.json  7. SMART ARTIKEL GENERATOR.json  8. SMART SCRAPER.json  AI NAV.json  ERR.json
data/temp_training_files/: cached_lm_LlamaTokenizerFast_127_temp_train_ft-ea106cae-4a31-43d8-b32f-1e1375693cc6.txt
flowork_cli/: __main__.py  cli.py
flowork_cli/core/: api_client.py
flowork_kernel/: __init__.py  api_client.py  api_contract.py  exceptions.py  kernel.py  services.json  webhook_server.py
flowork_kernel/core/: permission_hook.py
flowork_kernel/execution/: CheckpointManager.py  CheckpointManager.pyi  LoopHandler.py  LoopHandler.pyi  RetryHandler.py  RetryHandler.pyi  VariableResolver.py  VariableResolver.pyi
flowork_kernel/factories/: ParserFactory.py
flowork_kernel/models/: AgentModel.py  ConnectionModel.py  ManifestModel.py  NodeModel.py  WorkflowPayloadModel.py
flowork_kernel/services/: base_service.py
flowork_kernel/ui_shell/: __init__.py  canvas_manager.py  custom_tab.py  dashboard_frame.py  dashboard_manager.py  dashboard_tab.py  main_window.py  node_properties_popup.py  properties_popup.py  shared_properties.py  version_manager_popup.py  workflow_editor_tab.py
flowork_kernel/utils/: condition_evaluator.py  file_helper.py  payload_helper.py  performance_logger.py  type_converter.py
flowork_kernel/workers/: ai_worker.py
formatters/csv_formatter/: formatter.py
generated_services/formatter_manager_service/: service.py
generated_services/preset_manager_service/: service.py
generated_services/theme_manager_service/: service.py
locales/: en.json  id.json
modules/: __init__.py
modules/advanced_web_scraper_module_1a2b/: manifest.json  processor.py
modules/agent_host_module/: manifest.json  processor.py
scripts/: create_fingerprint.py  generate_docs.py  generate_integrity_manifest.py  generate_permissions.py  lock_addons.py  secure_encode.py  setup.py
themes/: flowork_default.json  ocean_dark.json  tema_cerah.json  tema_elegan.json  tema_hyper.json  tema_mewah.json  tema_netral.json
(+403 files in other folders)
