#######################################################################
# dev : awenk audico
# EMAIL SAHIDINAOLA@GMAIL.COM
# WEBSITE WWW.TEETAH.ART
# File NAME : C:\Users\User\Desktop\FLOWORK\pyproject.toml
# (Full code for the modified file)
#######################################################################
[tool.poetry]
name = "flowork"
version = "0.1.0"
description = ""
authors = ["AWENK AUDICO"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
pydantic = ">=2.11.7,<3.0.0"
ttkbootstrap = ">=1.14.1,<2.0.0"
requests = ">=2.32.4,<3.0.0"
beautifulsoup4 = ">=4.13.4,<5.0.0"
selenium = ">=4.34.2,<5.0.0"
webdriver-manager = ">=4.0.2,<5.0.0"
gtts = ">=2.5.4,<3.0.0"
pygame = ">=2.6.1,<3.0.0"
schedule = ">=1.2.2,<2.0.0"
pypdf2 = ">=3.0.1,<4.0.0"
watchdog = ">=6.0.0,<7.0.0"
plyer = ">=2.1.0,<3.0.0"
python-docx = ">=1.2.0,<2.0.0"
matplotlib = ">=3.10.3,<4.0.0"
pandas = ">=2.3.1,<3.0.0"
# (COMMENT) This version seems to have a bug with future dates. Pinning to a stable version.
apscheduler = "==3.10.4"
pycryptodome = ">=3.23.0,<4.0.0"
python-dateutil = ">=2.9.0.post0,<3.0.0"
cython = ">=3.1.2,<4.0.0"
yfinance = ">=0.2.65,<0.3.0"
psutil = ">=7.0.0,<8.0.0"
pywebview = ">=5.4,<6.0"
wcag-contrast-ratio = ">=0.9,<0.10"
google-generativeai = ">=0.8.5,<0.9.0"
sentence-transformers = ">=5.0.0,<6.0.0"
langdetect = ">=1.0.9,<2.0.0"
numpy = "<1.24"
scipy = "<1.11"
pystray = ">=0.19.5,<0.20.0"
cryptography = ">=45.0.5,<46.0.0"
pillow = "<11"
python-dotenv = ">=1.1.1,<2.0.0"
llama-cpp-python = ">=0.3.14,<0.4.0"
# (COMMENT) Added for GPU Image Generation
diffusers = "*"
accelerate = "*"
hf-xet = ">=1.1.5,<2.0.0"
transformers = ">=4.54.1,<5.0.0"
safetensors = ">=0.5.3,<0.6.0"
# (COMMENT) Dependencies for Screen Recorder Feature
mss = ">=9.0.1,<10.0.0"
PyAudio = ">=0.2.14,<0.3.0"

# (FIXED) Specify PyTorch packages here with their source to prevent downgrading
torch = { version = ">=2.5.1,<3.0.0", source = "pytorch" }
torchvision = { version = ">=0.20.1,<0.21.0", source = "pytorch" }
torchaudio = { version = ">=2.5.1,<3.0.0", source = "pytorch" }
fake-useragent = "^2.2.0"
duckduckgo-search = "^8.1.1"


[tool.poetry.group.dev.dependencies]
nuitka = ">=2.7.12,<3.0.0"
radon = ">=6.0.1,<7.0.0"
pyflakes = ">=3.4.0,<4.0.0"
pip-audit = ">=2.9.0,<3.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.18"
mkdocstrings-python = "^1.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# (COMMENT) This section correctly defines the alternative source for PyTorch packages.
[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"